<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".presentation.view.fragment.NewExpenseFragment">

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        app:layout_constraintEnd_toStartOf="@+id/currencyTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/AmountEditTextStyle" />

    <TextView
        android:id="@+id/currencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₽"
        app:layout_constraintBottom_toBottomOf="@+id/amountEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/amountEditText"
        app:layout_constraintTop_toTopOf="@+id/amountEditText"
        style="@style/CurrencyStyle" />

    <LinearLayout
        android:id="@+id/categoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountEditText"
        style="@style/RippleLayoutStyle">

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/bar"
            android:layout_marginHorizontal="@dimen/to_parent_default"
            app:layout_constraintTop_toBottomOf="@id/amountEditText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/new_operation_divider_margin_vertical"
            android:layout_marginHorizontal="@dimen/to_parent_default"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/categoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/category"
                style="@style/NewOperationHintStyle" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="@dimen/new_operation_icon_to_text"
                android:src="@drawable/category_empty_ic" />

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/category_empty"
                style="@style/NewOperationSelectedStyle" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/to_parent_default"
            app:dividerColor="@color/bar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/accountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryLayout"
        style="@style/RippleLayoutStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/new_operation_divider_margin_vertical"
            android:layout_marginHorizontal="@dimen/to_parent_default"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accountTitle"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/account"
                style="@style/NewOperationHintStyle"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/accountIcon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="@dimen/new_operation_icon_to_text"
                android:src="@drawable/account_ic"/>

            <TextView
                android:id="@+id/accountTextView"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="Card"
                style="@style/NewOperationSelectedStyle"/>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/to_parent_default"
            app:dividerColor="@color/bar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountLayout"
        style="@style/RippleLayoutStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/new_operation_divider_margin_vertical"
            android:layout_marginHorizontal="@dimen/to_parent_default"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTitle"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/date"
                style="@style/NewOperationHintStyle"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/dateIcon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="@dimen/new_operation_icon_to_text"
                android:src="@drawable/date_ic" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="Сегодня"
                style="@style/NewOperationSelectedStyle"/>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/to_parent_default"
            app:dividerColor="@color/bar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/commentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateLayout"
        style="@style/RippleLayoutStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/new_operation_divider_margin_vertical"
            android:layout_marginHorizontal="@dimen/to_parent_default"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:hint="@string/comment"
                style="@style/CommentEditTextStyle" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/to_parent_default"
            app:dividerColor="@color/bar" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveOperationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@id/repeatOperationButton"
        style="@style/SaveOperationButtonStyle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/repeatOperationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat_operation"
        android:layout_marginHorizontal="@dimen/to_parent_default"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/RepeatOperationButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>